[package]
name = "stardust-music"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Colliers <mail@thomascolliers.com>"]
description = "Simple music player client for Stardust XR"
license = "GPLv2"

[dependencies]
tokio = { version = "1.45.0", features = ["rt-multi-thread", "tokio-macros"] }
serde = "1.0.219"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tracy = "0.11.4"
phonic = "0.10.0"

[dependencies.stardust-xr-asteroids]
git = "https://github.com/StardustXR/asteroids.git"
branch = "dev"

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
branch = "dev"
